# AegisFlow

./: .gitignore  CONTRIBUTING.md  README.md  aegis_audit.schema.json  package-lock.json  package.json  pyproject.toml
aegisflow/: README.md  __init__.py  cli.py  cli_main.py  config.py  core.py  filesystem.py  llm.py  rails.py  sandwich.py  scanners.py  scrubber.py  sentinel.py
aegisflow/detectors/: __init__.py  ml_detector.py  regex_detector.py
aegisflow/plugins/: __init__.py  builtin.py
docs/: index.md
docs/.vitepress/: config.mjs
docs/api/: python-sdk.md
docs/cookbook/: custom-plugins.md  langchain.md  ollama-guardian.md
docs/core/: detection-engine.md  rails.md  sandwich.md  sentinel.md
docs/guide/: configuration.md  installation.md  introduction.md  quickstart.md
tests/: conftest.py  test_config.py  test_detectors.py  test_plugins.py  test_rails.py  test_scrubber.py  test_sentinel.py
tests/red_team/: __init__.py  test_red_team.py
