[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegisflow"
version = "2.5.2"
description = "A sophisticated Security Liaison and Governance Layer for AI Agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Ari", email = "ari@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "rich",
    "litellm",
    "psutil",
]

[project.scripts]
aegis = "aegisflow.cli_main:main"

[project.urls]
Homepage = "https://aegisflow-security.surge.sh"
Documentation = "https://aegisflow-security.surge.sh"
Source = "https://github.com/Arigitshub/AegisFlow"
Tracker = "https://github.com/Arigitshub/AegisFlow/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegisflow"]
